# flavor-pipeline

./: .envrc  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  dagster.yaml  justfile  pyproject.toml
.claude/: settings.local.json
.claude/commands/: architecture.md  new-acquirer.md  new-pipeline.md  new-source.md
.github/workflows/: ci.yml
archives/: manifest.json
src/flavor_pipeline/: __init__.py  definitions.py
src/flavor_pipeline/acquirers/: __init__.py  archive.py  base.py  bitterdb.py  culinarydb.py  duke_phytochem.py  factory.py  fao_infoods.py  fenaroli.py  flavordb2.py  foodatlas.py  foodb.py  fsbi.py  metabolights.py  panten.py  sweetenersdb.py  umamidb.py  usda.py  vcf.py  winesensed.py
src/flavor_pipeline/acquisition/: __init__.py  bitterdb.py  culinarydb.py  duke_phytochem.py  fao_infoods.py  fenaroli.py  flavordb2.py  foodatlas.py  foodb.py  fsbi.py  metabolights.py  panten.py  sweetenersdb.py  umamidb.py  usda.py  vcf.py  winesensed.py
src/flavor_pipeline/assets/: __init__.py  acquisition.py  tier1.py  tier2.py
src/flavor_pipeline/cli/: __init__.py  archive_commands.py
src/flavor_pipeline/consolidation/: __init__.py  merger.py
src/flavor_pipeline/derived/: __init__.py
src/flavor_pipeline/food_assets/: __init__.py  tier1.py  tier2.py
src/flavor_pipeline/food_consolidation/: __init__.py  merger.py
src/flavor_pipeline/food_sources/: __init__.py  base.py  foodb_food.py  usda_food.py
src/flavor_pipeline/resources/: __init__.py
src/flavor_pipeline/schemas/: __init__.py  avo.py  food.py  (+2 more)
tests/: __init__.py  conftest.py
(+36 files in other folders)
