[project]
name = "flavor-pipeline"
version = "0.1.0"
description = "Dagster-based flavor molecule data pipeline with Attributed Value Objects"
requires-python = ">=3.11"
dependencies = [
    "dagster>=1.9.0",
    "dagster-webserver>=1.9.0",
    "pydantic>=2.5.0",
    "pandas>=2.1.0",
    "pyarrow>=14.0.0",
    "duckdb>=0.10.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pymupdf>=1.23.0",
    "gdown>=5.0.0",
    "datasets>=2.14.0",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "responses>=0.25.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flavor_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.dagster]
module_name = "flavor_pipeline.definitions"
